@startuml

title __TOPDOWN's Class Diagram__\n

  package topdown {
    class Bullet {
    }
  }
  

  package topdown {
    class ControlsMenu {
    }
  }
  

  package topdown {
    class Credits {
    }
  }
  

  package topdown {
    class Enemy {
    }
  }
  

  package topdown {
    class Game {
    }
  }
  

  package topdown {
    abstract class GameObject {
    }
  }
  

  package topdown {
    class GameOverScreen {
    }
  }
  

  package topdown {
    class GameScreen {
    }
  }
  

  package topdown {
    class GameWonScreen {
    }
  }
  

  package topdown {
    class Handler {
    }
  }
  

  package topdown {
    class KeyControls {
    }
  }
  

  package topdown {
    class Menu {
    }
  }
  

  package topdown {
    class MouseInput {
    }
  }
  

  package topdown {
    class OptionsMenu {
    }
  }
  

  package topdown {
    class PauseMenu {
    }
  }
  

  package topdown {
    class PlayerSupplies {
    }
  }
  

  package topdown {
    class SecondTimer {
    }
  }
  

  package topdown {
    enum State {
    }
  }
  

  package topdown {
    class TestTopDown {
    }
  }
  

  package topdown {
    enum Type {
    }
  }
  

  package topdown {
    class UserPlayer {
    }
  }
  

  package topdown {
    class Window {
    }
  }
  

  Bullet -up-|> GameObject
  Bullet o-- Handler : handle
  Bullet o-- Type : shooter
  ControlsMenu o-- Game : game
  Credits o-- Game : game
  Enemy -up-|> GameObject
  Enemy o-- Handler : handle
  Enemy o-- Game : game
  Enemy o-- Type : type
  Game -up-|> Runnable
  Game -up-|> Canvas
  Game o-- Handler : handle
  Game o-- UserPlayer : player
  Game o-- Enemy : enemy1
  Game o-- Enemy : enemy2
  Game o-- Enemy : enemy3
  Game o-- Enemy : enemy4
  Game o-- Enemy : enemy5
  Game o-- PlayerSupplies : healthSupply1
  Game o-- PlayerSupplies : ammoSupply1
  Game o-- State : state
  Game o-- Menu : menu
  Game o-- Credits : credits
  Game o-- OptionsMenu : option
  Game o-- GameScreen : gameScreen
  Game o-- GameOverScreen : gameOver
  Game o-- GameWonScreen : gameWon
  Game o-- PauseMenu : pauseMenu
  Game o-- ControlsMenu : controlMenu
  GameObject o-- Type : type
  GameObject o-- Handler : handle
  GameOverScreen o-- Game : game
  GameScreen o-- Game : game
  GameScreen o-- UserPlayer : player
  GameWonScreen o-- Game : game
  KeyControls -up-|> KeyAdapter
  KeyControls o-- Handler : handle
  KeyControls o-- Game : game
  Menu o-- Game : game
  MouseInput -up-|> MouseListener
  MouseInput o-- Game : game
  MouseInput o-- Handler : handle
  OptionsMenu o-- Game : game
  PauseMenu o-- Game : game
  PlayerSupplies -up-|> GameObject
  PlayerSupplies o-- Handler : handle
  PlayerSupplies o-- Game : game
  PlayerSupplies o-- Type : type
  UserPlayer -up-|> GameObject
  UserPlayer o-- Handler : handle
  UserPlayer o-- Game : game
  UserPlayer o-- SecondTimer : timer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
